--- a/en/index.html
+++ b/en/index.html
@@ -44,17 +44,18 @@
         <link type="text/css" rel="stylesheet" href="./assets/css/common.css">
 
         <!-- common JS -->
-        <script src="./assets/vendors/modernizr-detectizr.js"></script>
-        <script type="text/javascript" src="./assets/vendors/jquery-3.4.1.min.js"></script>
+        <!--<script src="./assets/vendors/modernizr-detectizr.js"></script>
+        <script type="text/javascript" src="./assets/vendors/jquery-3.4.1.min.js"></script>-->
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script type="text/javascript" src="./assets/js/common/GA_TrackingCode.js"></script>
+        <!--<script type="text/javascript" src="./assets/js/common/GA_TrackingCode.js"></script>
         <script type="text/javascript">
             TrackingCode.pageTagging( 'main' );
-        </script>
+        </script>-->
 
         <!-- sns share API FN -->
-        <script type="text/javascript" src="./assets/js/common/share.api.js"></script>
+        <!--<script type="text/javascript" src="./assets/js/common/share.api.js"></script>-->
         <script type="text/javascript">
             function share_to_TW() { callShare( 'TW' ); }		// twitter
             function share_to_FB() { callShare( 'FB' ); }		// Facebook
@@ -99,58 +100,49 @@
                         </div>
 
                         <div class="sec-cont">
-                            <div class="gallery-list" id="gallery-container">
-                                <div class="swiper-container gallery-top">
-                                    <ol class="list-wrap swiper-wrapper">
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_1.jpg')"></span>
-                                                <figcaption><span class="txt">병원전경</span></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_2.jpg')"></span>
-                                                <figcaption><span class="txt">병원입구</span></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_3.jpg')"></span>
-                                                <figcaption><span class="txt">대기실</span></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_4.jpg')"></span>
-                                                <figcaption><span class="txt">엑스레이실</span></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_5.jpg')"></span>
-                                                <figcaption><span class="txt">CT실</span></figcaption>
-                                            </figure>
-                                        </li>
-                                        <li class="list-item swiper-slide">
-                                            <figure class="img-holder image-cover">
-                                                <span class="img" style="background-image: url('./assets/images/contents/portfolio/hospital_photo_6.jpg')"></span>
-                                                <figcaption><span class="txt">시술실(1)</span></figcaption>
-                                            </figure>
-                                        </li>
-                                    </ol>
-                                    <!-- controller -->
-                                    <div class="swiper-button-prev"></div>
-                                    <div class="swiper-button-next"></div>
-                                </div>
+                            <style>
+                                .swiper-container {
+                                    width: 100%;
+                                    height: 100%;
+                                }
+                                .swiper-slide {
+                                    text-align: center;
+                                    font-size: 18px;
+                                    background: #fff;
 
-                                <!-- Thumbnail list -->
-                                <div class="swiper-container gallery-thumbs">
-                                    <div class="list-wrap swiper-wrapper">
-                                        <!-- copy items -->
-                                    </div>
+                                    /* Center slide text vertically */
+                                    display: -webkit-box;
+                                    display: -ms-flexbox;
+                                    display: -webkit-flex;
+                                    display: flex;
+                                    -webkit-box-pack: center;
+                                    -ms-flex-pack: center;
+                                    -webkit-justify-content: center;
+                                    justify-content: center;
+                                    -webkit-box-align: center;
+                                    -ms-flex-align: center;
+                                    -webkit-align-items: center;
+                                    align-items: center;
+                                }
+                            </style>
+
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">Slide 1</div>
+                                    <div class="swiper-slide">Slide 2</div>
+                                    <div class="swiper-slide">Slide 3</div>
+                                    <div class="swiper-slide">Slide 4</div>
+                                    <div class="swiper-slide">Slide 5</div>
+                                    <div class="swiper-slide">Slide 6</div>
+                                    <div class="swiper-slide">Slide 7</div>
+                                    <div class="swiper-slide">Slide 8</div>
+                                    <div class="swiper-slide">Slide 9</div>
+                                    <div class="swiper-slide">Slide 10</div>
                                 </div>
+                                <!-- Add Pagination -->
+                                <div class="swiper-pagination"></div>
                             </div>
+
                         </div>
                     </div>
                 </section>
@@ -161,12 +153,18 @@
         </div>
     </div>
 
-    <!-- VendorJS -->
+<!--    <script type="text/javascript" src="./assets/vendors/jquery-3.4.1.min.js"></script>-->
+<!--    <script src="assets/vendors/jquery.mousewheel.js"></script>-->
+
+    <!--&lt;!&ndash; VendorJS &ndash;&gt;
     <script src="assets/vendors/jquery.easing-1.3.min.js"></script>
-    <script src="assets/vendors/jquery.mousewheel.js"></script>
+
     <script src="assets/vendors/swiper/swipe.js"></script>
 
-    <!-- App JS -->
+    &lt;!&ndash; App JS &ndash;&gt;
     <script src="assets/js/interactive/App.js"></script>
+    <script src="assets/js/interactive/ui.js"></script>
+    <script src="assets/js/interactive/ui.sub.js"></script>-->
+    <script data-main="assets/js/index" src="./assets/vendors/require.js"></script>
 </body>
 </html>
