--- a/en/index.html
+++ b/en/index.html
@@ -108,13 +108,15 @@
                         <style>
 
                             body{
-
+                                /*overflow: hidden;*/
                             }
                             #app, .wrapper, main{
-
+                                /*height:100%;*/
                             }
                             main{
-                                scroll-snap-type: y proximity;
+                                /*overflow-y: scroll;*/
+                                /*scroll-snap-type:y proximity;*/
+                                /*scroll-snap-stop:normal;*/
                             }
                             .swiper-container {
                                 width: 100%;
@@ -131,7 +133,8 @@
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
-                                height:100%; background: chocolate;
+                                height:100%;
+                                background: chocolate;
                             }
                             .swiper-slide:nth-child(even){
                                 background: paleturquoise;
@@ -141,6 +144,7 @@
                                 background-color: lightgray;
                                 padding:10px;
                                 height:100vh;
+
                                 scroll-snap-align: start;
 
                             }
@@ -160,41 +164,45 @@
                                 padding:0;
                             }
                             .sec-4 .inner-wrap{
-                                position: absolute; left:0; top:0;
-                                width:100%; height:100%;
-                                display: block;
-                                overflow: hidden;
+                                left:0; top:0;
+                                /*position: absolute; */
+                                /*width:100%; height:100%;*/
+                                /*display: block;*/
+                                /*overflow: hidden;*/
 
                             }
-                            .sec-4 .inner-wrap.fixed{
-                                position: fixed;
-                                overflow-y: scroll;
 
+                            .sec-4.fixed{
+                                height: 200vh;
+                            }
+                            .sec-4.fixed .inner-wrap{
+                                position: fixed;
                             }
 
 
                             .sec-4 .inner-wrap .scrolling{
-                                position: relative;
-                                height: 400vh;
+                                /*position: relative;*/
+                                /*height: 400vh;*/
 
                             }
 
                             .sec-4 .sub-sec{
+                                display: none;
                                 position: absolute;
                                 left:0; top:0;
-                                display: flex;
+                                /*display: flex;*/
                                 justify-content: center;
                                 align-items: center;
                                 width:100%;
                                 height:100vh;
                                 font-size: 144px;
                             }
-                            .sec-4 .sub-sec:not(:first-child){
-
-                                opacity: 0;
+                            .sec-4 .sub-sec:first-child{
+                                display: block;
+                                /*opacity: 0;*/
                             }
 
-                            .sec-4 .inner-wrap.fixed .sub-sec{
+                            .sec-4.fixed .inner-wrap .sub-sec{
                                 position: fixed;
 
                             }
