--- a/en/index.html
+++ b/en/index.html
@@ -181,22 +181,21 @@
 
 
                             .sec-4 .inner-wrap .scrolling{
-                                /*position: relative;*/
-                                /*height: 400vh;*/
+
 
                             }
 
-                            .sec-4 .sub-sec{
+                            /*.sec-4 .sub-sec{
                                 display: none;
                                 position: absolute;
                                 left:0; top:0;
-                                /*display: flex;*/
+                                !*display: flex;*!
                                 justify-content: center;
                                 align-items: center;
                                 width:100%;
                                 height:100vh;
                                 font-size: 144px;
-                            }
+                            }*/
                             .sec-4 .sub-sec:first-child{
                                 display: block;
                                 /*opacity: 0;*/
@@ -213,6 +212,10 @@
                                 background: salmon;
                             }
 
+                            /* section임시 숨김*/
+                            .sec-1, .sec-3, .sec-4, .sec-5{
+                                display: none;
+                            }
                             section:not(:first-child) .inner-wrap{
                                 font-size: 64px;
                                 color: gold;
@@ -272,6 +275,66 @@
                                     display: flex;
                                 }
                             }
+
+
+
+                            main.show{
+                                display: none !important;
+                                opacity: 0;
+                                /*position: fixed;*/
+                                
+                            }
+
+                            .popup{
+                                display: none;
+                                /*position: relative;*/
+                                background: lightgray;
+                                font-size: 48px;
+                                min-height: 2000px;
+
+                            }
+
+                            .popup.show{
+                                display:block;
+                            }
+
+                            .popup .inner{
+                                position: relative;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                flex-direction: column;
+                                background: #00C3B2;
+                            }
+
+                            .popup .img{
+                                /*position: absolute;*/
+                                left:0; top:0;
+                                z-index: 0;
+                                width:100%; height:100%;
+                                height:100vh;
+                            }
+                            .popup .img.fixed{
+                                /*position: fixed;*/
+                            }
+                            .popup img{
+                                width:100%; height:100%;
+                                object-fit: cover;
+                            }
+
+                            .popup .content{
+                                position: relative;
+                                width:100%;
+                                /*margin-top: 100vh;*/
+                                background: #fff;
+                            }
+
+                            .popup button{
+                                position: fixed; right:10px; top:100px;
+                                background: #333333;
+                                color: #fff;
+                                font-size: 24px;
+                            }
                         </style>
 
                         <div class="swiper-container">
@@ -292,7 +355,11 @@
                         </div>
                     </div>
                 </section>
-                <section id="main-sec-2" class="sec-2"><div class="inner-wrap">#2</div></section>
+                <section id="main-sec-2" class="sec-2">
+                    <div class="inner-wrap">#2
+                        <button type="button" onclick="showPopup()">팝업 오픈</button>
+                    </div>
+                </section>
                 <section id="main-sec-3" class="sec-3"><div class="inner-wrap">#3</div></section>
                 <section id="main-sec-4" class="sec-4">
                     <div class="inner-wrap">
@@ -307,11 +374,105 @@
                 <section id="main-sec-5" class="sec-5"><div class="inner-wrap">#5</div></section>
             </main>
 
+            <div class="popup">
+                <div class="inner">
+                    <p class="img"><img src="http://design.samsung.com/kr/contents/out-of-the-box/img/img_sec_kv_bg.jpg" alt=""></p>
+                    <p class="content">
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+                        팝업 내용<br>
+
+                    </p>
+                    <button type="button" onclick="hidePopup()">팝업 닫기</button>
+
+                </div>
+            </div>
+
             <footer style="background-color: gray">풋터입니다.</footer>
             <!-- //Page Content -->
         </div>
     </div>
 
     <script data-main="assets/js/index" src="./assets/vendors/require.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script>
+
+            function showPopup(){
+                $('main').addClass('show');
+                $('.popup').show();
+
+                //setTimeout(function(){
+                    let scrollTop;
+
+                    $(window).on('scroll.pop', function(e){
+                        scrollTop = Math.round($(window).scrollTop());
+
+                        let value = scrollTop / $('.popup .content').offset().top +1;
+                        $('.popup .img').css({
+                            transform: `scale(${value})`
+                        });
+
+                        if(scrollTop >=0 && scrollTop < $(window).height()){
+                            if(!$('.popup .img').hasClass('fixed')){
+                                $('.popup .img').addClass('fixed');
+                            }
+                        }else{
+                            if($('.popup .img').hasClass('fixed')){
+                                $('.popup .img').removeClass('fixed');
+                            }
+                        }
+                    });
+
+
+                    var $window = $(window);        //Window object
+
+                    var scrollTime = 1.2;           //Scroll time
+                    var scrollDistance = 170;       //Distance. Use smaller value for shorter scroll and greater value for longer scroll
+
+                    $window.on("mousewheel.pop DOMMouseScroll.pop", function(event){
+
+                        event.preventDefault();
+
+                        var delta = event.originalEvent.deltaY/120 || -event.originalEvent.detail/3;
+                        var finalScroll = scrollTop - parseInt(delta*scrollDistance);
+
+                        console.log('finalScroll', scrollTop, finalScroll, delta, Power1.easeOut)
+                        TweenMax.to($window, scrollTime, {
+                            scrollTo : { y: finalScroll, autoKill:true },
+                            ease: Power1.easeOut,   //For more easing functions see https://api.greensock.com/js/com/greensock/easing/package-detail.html
+                            autoKill: true,
+                            overwrite: 5
+                        });
+
+                    });
+
+
+                //},1000)
+            }
+
+            function hidePopup(){
+                $('main').removeClass('show');
+                $('.popup').hide();
+                $('.popup .img').removeClass('fixed').removeAttr('style');
+                $(window).off('scroll.pop');
+                $(window).off("mousewheel.pop DOMMouseScroll.pop");
+            }
+
+
+
+
+    </script>
 </body>
 </html>
