gulp modify ver.4 CSS tree

--- a/template-2-gulp-v4/src/inc/inc_common_head.html
+++ b/template-2-gulp-v4/src/inc/inc_common_head.html
@@ -45,7 +45,7 @@
 
 <link rel="stylesheet" href="{{ path }}assets/css/{{ resourcesFiles.vendorCSS }}">
 
-<link rel="stylesheet" href="{{ path }}assets/css/{{ resourcesFiles.globalCSS }}">
+<link rel="stylesheet" href="{{ path }}assets/css/{{ resourcesFiles.commonCSS }}">
 <link rel="stylesheet" href="{{ path }}assets/css/{{ resourcesFiles.appCSS }}">
 
 <script type="text/javascript" src="{{ path }}assets/js/{{ resourcesFiles.vendorJs }}"></script>
